Fix (fileupload): Changed fileupload button to work on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -97,6 +97,24 @@ nav h1 {
   color: #28a745;
 }
 
+/* new style */
+.fileUpload {
+  /* position: relative; */
+  overflow: hidden;
+  margin: 0.25em;
+}
+.fileUpload input.upload {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  cursor: pointer;
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
+
 .btn-file {
   margin-left: 0.55em;
   border: 2px solid #333;
@@ -151,7 +169,7 @@ nav h1 {
 }
 
 @media screen and (max-width: 415px) {
-  .custom-file-upload input[type='file'] {
+  /* .custom-file-upload input[type='file'] {
     display: inline;
   }
 
@@ -159,7 +177,7 @@ nav h1 {
     margin-top: 10%;
     margin-left: 10%;
     cursor: pointer;
-  }
+  } */
 
   .btn-file {
     margin-left: 15%;
